# C-Code-Visualizer

./: .gitignore  README.md  demo.c
backend/: server.py
backend/engine/: CMakeLists.txt
backend/engine/include/: gdb_controller.hpp  mi_parser.hpp  types.hpp
backend/engine/src/: gdb_controller.cpp  main.cpp  mi_parser.cpp
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: CodeEditor.tsx  ConsolePanel.tsx  ControlPanel.tsx  StackPanel.tsx  VariablePanel.tsx
frontend/src/hooks/: useDebugSession.ts
